Update Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb

--- a/Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb
+++ b/Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb
@@ -111,7 +111,7 @@
    "id": "393f8f77",
    "metadata": {},
    "source": [
-    "# Etape 4 : Extraction des données via Bs4:\n",
+    "# Etape 4 : Extraction des données via Bs4/Selenium:\n",
     "    # attention, il ne faut pas fermer le navigateur Firefox qui vient de s'ouvrir automatiquement (il faut rester connecté)"
    ]
   },
