Update Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb

--- a/Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb
+++ b/Extraction_Job_Info_LinkedIn_With_Account 1 (GitHub).ipynb
@@ -29,7 +29,7 @@
    "id": "e34c8232",
    "metadata": {},
    "source": [
-    "# Etape 2 : Importer les Libraries requises "
+    "# Etape 2 : Importer les Libraries nécessaires "
    ]
   },
   {
